# GenAI

./: .gitignore  CLAUDE.md  README.md  download_data.py  inspect_outputs.py  part1_corruption_pipeline.ipynb  part2_benchmarking.ipynb  part3_mitigation.ipynb  pipeline.py  plot_results.py  pypart1.py  pypart2.py  pypart3.py  pyproject.toml
VLLM_application/: VLLM_application.ipynb
data/: benchmark_results.json  corrupted_dataset.json
lmstudio_script.py/: lmstudio_script.py
lmstudio_script.py/__MACOSX/: ._lmstudio_script.py
