[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.12.0",
    "transformers>=4.49.0",
    "datasets>=2.20.0",
    "Pillow>=10.0.0",
    "accelerate>=0.30.0",
    "spacy>=3.7.0",
    "tqdm>=4.66.0",
    "ipykernel>=6.29.0",
    "torchvision>=0.27.0",
    "peft>=0.19.1",
    "backoff>=2.2.1",
    "qwen-vl-utils>=0.0.8",
]
